--- a/assets/py scripts/data_formatting.ipynb
+++ b/assets/py scripts/data_formatting.ipynb
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
        "4       2013-07-16  Terminated  Voluntary: Firm Initiated       Class II  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
        "4           2012  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,155 +810,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Garden-Fresh Foods, Inc.      633\n",
-       "Newly Weds Foods Inc          381\n",
-       "Good Herbs, Inc.              353\n",
-       "Blue Bell Creameries, L.P.    292\n",
-       "Reser's Fine Foods, Inc.      219\n",
-       "Name: recalling_firm, dtype: int64"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "firm_count_df = clean_df['recalling_firm'].value_counts()\n",
-    "firm_count_df.head()"
+    "firm_count_df.to_csv('../../website/src/data/firm_count.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Class II              8874\n",
-       "Class I               7707\n",
-       "Class III             1009\n",
-       "Not Yet Classified      31\n",
-       "Name: classification, dtype: int64"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "classification_count_df = clean_df[\"classification\"].value_counts()\n",
-    "classification_count_df.head()"
+    "classification_count_df.to_csv('../../website/src/data/classification_count.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "United States    17480\n",
-       "Canada              75\n",
-       "Taiwan              12\n",
-       "France              10\n",
-       "Mexico               7\n",
-       "Name: country, dtype: int64"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "country_count_df = clean_df['country'].value_counts()\n",
-    "country_count_df.head()"
+    "country_count_df.to_csv('../../website/src/data/country_count.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2017    3187\n",
-       "2016    3012\n",
-       "2015    2835\n",
-       "2014    2259\n",
-       "2013    2108\n",
-       "Name: year_reported, dtype: int64"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "yearly_count_df = clean_df[\"year_reported\"].value_counts()\n",
-    "yearly_count_df.head()"
+    "yearly_count_df.to_csv('../../website/src/data/yearly_count.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Terminated    15688\n",
-       "Ongoing        1731\n",
-       "Completed       202\n",
-       "Name: status, dtype: int64"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "status_count_df = clean_df['status'].value_counts()\n",
-    "status_count_df.head()\n"
+    "status_count_df.to_csv('../../website/src/data/status_count.csv')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Voluntary: Firm Initiated    17309\n",
-       "FDA Mandated                   310\n",
-       "Voluntary: FDA Requested         2\n",
-       "Name: voluntary_mandated, dtype: int64"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "vol_man_count_df = clean_df['voluntary_mandated'].value_counts()\n",
-    "vol_man_count_df.head()"
+    "vol_man_count_df.to_csv('../../website/src/data/vol_man_count.csv')"
    ]
   },
   {
